--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Nested Comments In HTML",
   "author": "Phil Sinatra",
   "github": "https://github.com/philsinatra",
-  "activationEvents": [
-    "html-nested-comments:comment"
-  ],
+  "activationCommands": {
+    "atom-text-editor": ["html-nested-comments:comment"]
+  },
   "repository": "https://github.com/philsinatra/html-nested-comments",
   "license": "MIT",
   "engines": {
